fix: specify size of logo icon SVG so it doesn't get too large

--- a/assets/css/nav/_top_nav.scss
+++ b/assets/css/nav/_top_nav.scss
@@ -15,6 +15,11 @@
 .m-top-nav__logo {
   width: 2.5rem;
   height: 1.5rem;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .m-top-nav__logo-icon {
